Added some text about mcu to thesis

--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -72,3 +72,13 @@ number = {YCS-2003-348}
 	note = {https://www.st.com/resource/en/datasheet/lsm6dsox.pdf},
 }
 
+@manual{ATMEGA328P,
+	title = {Dokumentacja układu ATmega328p},
+	note = {http://www.elenota.pl/datasheetpdf/158353/Atmel/ATMEGA328P},
+}
+
+
+@manual{STM32F303K8,
+	title = {Dokumentacja układu STM32F303K8},
+	note = {https://www.st.com/resource/en/datasheet/stm32f303k8.pdf},
+}
