--- a/Thesis/praca.tex
+++ b/Thesis/praca.tex
@@ -97,6 +97,7 @@ backend=bibtex
 \usepackage{multirow}
 \usepackage{booktabs}
 \usepackage{makecell}
+\usepackage{tikz}
 \usepackage[flushleft]{threeparttable}
 
 % defines the X column to use m (\parbox[c]) instead of p (`parbox[t]`)
