First chapter is done

--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -82,3 +82,36 @@ number = {YCS-2003-348}
 	title = {Dokumentacja układu STM32F303K8},
 	note = {https://www.st.com/resource/en/datasheet/stm32f303k8.pdf},
 }
+
+@manual{NRF52840,
+	title = {Dokumentacja układu nRF52840},
+	note = {https://infocenter.nordicsemi.com/pdf/nRF52840-PS-v1.1.pdf},
+}
+
+@manual{SIM800L,
+	title = {Dokumentacja układu SIM800L},
+	note = {https://www.filipeflop.com/img/files/download/Datasheet-SIM800L.pdf},
+}
+
+@manual{SKY66430,
+	title = {Dokumentacja układu SKY66430},
+}
+
+@manual{BN220,
+	title = {Dokumentacja układu Beitian BN-220},
+	note = {https://files.banggood.com/2016/11/BN-22020GPS+Antenna20datasheet.pdf},
+}
+
+@manual{MT3339,
+	title = {Opis producenta układu MT3339},
+	note = {https://labs.mediatek.com/en/chipset/MT3339},
+}
+
+@manual{MT3333,
+	title = {Dokumentacja układu MT3333},
+}
+
+@unpublished{ANGI,
+  author = {Specialized},
+  url = {https://www.specialized.com/pl/pl/stories/angi}
+}
