Added chapter 2 - Prototype

--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -113,5 +113,6 @@ number = {YCS-2003-348}
 
 @unpublished{ANGI,
   author = {Specialized},
+  title = {Strona producenta rozwiązania ANGI},
   url = {https://www.specialized.com/pl/pl/stories/angi}
 }
