--- a/Thesis/praca.tex
+++ b/Thesis/praca.tex
@@ -164,9 +164,8 @@ backend=bibtex
 \tableofcontents
 \clearpage
 
-%\include{rozdzial3}
 \include{wstep}
-%\include{rozdzial2}
+\include{prototyp}
 %\include{tests}
 
 
