--- a/Thesis/praca.tex
+++ b/Thesis/praca.tex
@@ -99,6 +99,9 @@ backend=bibtex
 \usepackage{makecell}
 \usepackage{tikz}
 \usepackage{pifont}
+\usepackage{subcaption}
+\usepackage{graphicx}
+\usepackage{float}
 \usepackage[flushleft]{threeparttable}
 
 % defines the X column to use m (\parbox[c]) instead of p (`parbox[t]`)
