--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -59,38 +59,38 @@ number = {YCS-2003-348}
 
 @manual{MPU6050,
 	title = {Dokumentacja układu MPU-6050},
-	note = {https://invensense.tdk.com/wp-content/uploads/2015/02/MPU-6000-Datasheet1.pdf},
+	howpublished = "\url{https://invensense.tdk.com/wp-content/uploads/2015/02/MPU-6000-Datasheet1.pdf}"
 }
 
 @manual{LSM9DS1,
 	title = {Dokumentacja układu LSM9DS1},
-	note = {https://www.st.com/resource/en/datasheet/lsm9ds1.pdf},
+	howpublished = "\url{https://www.st.com/resource/en/datasheet/lsm9ds1.pdf}"
 }
 
 @manual{LSM6DSOX,
 	title = {Dokumentacja układu LSM6DSOX},
-	note = {https://www.st.com/resource/en/datasheet/lsm6dsox.pdf},
+	howpublished = "\url{https://www.st.com/resource/en/datasheet/lsm6dsox.pdf}"
 }
 
 @manual{ATMEGA328P,
 	title = {Dokumentacja układu ATmega328p},
-	note = {http://www.elenota.pl/datasheetpdf/158353/Atmel/ATMEGA328P},
+	howpublished = "\url{http://www.elenota.pl/datasheetpdf/158353/Atmel/ATMEGA328P}"
 }
 
 
 @manual{STM32F303K8,
 	title = {Dokumentacja układu STM32F303K8},
-	note = {https://www.st.com/resource/en/datasheet/stm32f303k8.pdf},
+	howpublished = "\url{https://www.st.com/resource/en/datasheet/stm32f303k8.pdf}"
 }
 
 @manual{NRF52840,
 	title = {Dokumentacja układu nRF52840},
-	note = {https://infocenter.nordicsemi.com/pdf/nRF52840-PS-v1.1.pdf},
+	howpublished = "\url{https://infocenter.nordicsemi.com/pdf/nRF52840-PS-v1.1.pdf}"
 }
 
 @manual{SIM800L,
 	title = {Dokumentacja układu SIM800L},
-	note = {https://www.filipeflop.com/img/files/download/Datasheet-SIM800L.pdf},
+	howpublished = "\url{https://www.filipeflop.com/img/files/download/Datasheet-SIM800L.pdf}"
 }
 
 @manual{SKY66430,
@@ -99,20 +99,34 @@ number = {YCS-2003-348}
 
 @manual{BN220,
 	title = {Dokumentacja układu Beitian BN-220},
-	note = {https://files.banggood.com/2016/11/BN-22020GPS+Antenna20datasheet.pdf},
+	howpublished = "\url{https://files.banggood.com/2016/11/BN-22020GPS+Antenna20datasheet.pdf}"
 }
 
 @manual{MT3339,
 	title = {Opis producenta układu MT3339},
-	note = {https://labs.mediatek.com/en/chipset/MT3339},
+	howpublished = "\url{https://labs.mediatek.com/en/chipset/MT3339}",
 }
 
 @manual{MT3333,
 	title = {Dokumentacja układu MT3333},
 }
 
-@unpublished{ANGI,
-  author = {Specialized},
+@manual{ANGI,
   title = {Strona producenta rozwiązania ANGI},
-  url = {https://www.specialized.com/pl/pl/stories/angi}
+  howpublished = "\url{https://www.specialized.com/pl/pl/stories/angi}"
+}
+
+@manual{otii,
+  title       = {Strona producenta Otii},
+  howpublished = "\url{https://www.qoitech.com/}"
+}
+
+@manual{unico,
+  title       = {Program Unico-GUI},
+  howpublished = "\url{https://www.st.com/en/development-tools/unico-gui.html}"
+}
+
+@manual{lsm6dsoxappnote,
+  title       = {Nota aplikacyjna maszyn stanów układu LSM6DSOX},
+  howpublished = "\url{https://www.st.com/resource/en/application_note/dm00572971-lsm6dsox-finite-state-machine-stmicroelectronics.pdf}"
 }
